--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
 buildscript {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:4.0.0'
     }
 }
 allprojects {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
