addd network utils

--- a/connectionclass-sample/build.gradle
+++ b/connectionclass-sample/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 repositories {
     jcenter()
@@ -18,4 +19,5 @@ android {
 
 dependencies {
     implementation project (":connectionclass")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
